--- a/scss/_monitorPanel.scss
+++ b/scss/_monitorPanel.scss
@@ -30,5 +30,6 @@
     padding: 0.2em;
     overflow-y: scroll;
     overflow-x: auto;
+    white-space: pre;
   }
 }
